roles/adminer/files/.k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
spec:
  selector:
    matchLabels:
      app: adminer
  replicas: 1
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
      - name: adminer
        image: adminer
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
