roles/adminer/files/.k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: adminer
spec:
  selector:
    app: adminer
  ports:
    - port: 80
      targetPort: 8080
