roles/adminer/files/.k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-staging'
spec:
  tls:
  - hosts:
    - adminer.6766998f.nip.io
    secretName: adminer-tls
  rules:
  - host: adminer.6766998f.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: adminer
            port:
              number: 80
